# Lumen

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat
docs/: env.local.example  home-assistant-integration.md  home-assistant-package-example.yaml
scripts/: smoke-test.ps1
src/lumen/: __init__.py  actions.py  config.py  formatting.py  main.py  models.py  time_utils.py
src/lumen/api/: deps.py
src/lumen/api/routes/: admin.py  assist.py  chat.py  health.py  home_assistant.py  knowledge.py  memory.py  ui.py
src/lumen/connectors/: home_assistant.py  ollama.py
src/lumen/knowledge/: store.py
src/lumen/memory/: store.py
src/lumen/services/: agent.py  bootstrap.py
src/lumen/static/: admin.css  admin.html  admin.js
src/lumen/storage/: db.py
tests/: test_api.py
